k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: production-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: production-app
  ports:
    - port: 80
      targetPort: 3000
