k8s/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production-ingress
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: dev-grafana-strip@kubernetescrd

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - nextgenerationpetrolium.com
      secretName: app-tls

  rules:
    - host: nextgenerationpetrolium.com
      http:
        paths:
          # APP
          - path: /
            pathType: Prefix
            backend:
              service:
                name: production-service
                port:
                  number: 80

          # GRAFANA
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
